# uMetadata

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
.circleci/: config.yml
.github/actions/prepare-environment/: action.yml
.github/workflows/: build.yaml
cmake/: uMetadataConfig.cmake.in
data/: toChannel.hpp  toStation.hpp  utah.hpp  utahChannels.hpp  ynp.hpp  ynpChannels.hpp
include/uMetadata/: channel.hpp  client.hpp  database.hpp  station.hpp
proto/: channel.proto  station.proto
proto/v1/: all_active_stations_request.proto  channel.proto  station.proto  station_information_service.proto  stations_response.proto  telemetry.proto
scripts/: Dockerfile.deb.in  Dockerfile.u24
src/: channel.cpp  client.cpp  database.cpp  main.cpp  server.cpp  station.cpp  updater.cpp  utilities.hpp  version.cpp  version.hpp.in
testing/: channel.cpp  database.cpp  station.cpp
uMetadataAPI/v1/: all_active_channels_request.proto  channel_information_service.proto  station.proto  station_information_service.proto  stations_response.proto  telemetry.proto
v1/: active_channel_request.proto  active_station_request.proto  all_active_stations_request.proto  channel.proto  station.proto  station_information_service.proto  telemetry.proto
